--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,8 @@
 # arxivの学問領域の指定
-subject: 'cs'
+subject: 'physics'
 
 # 検索キーワード
 keywords:
-        kaggle: 3
-        resnet: 3
-        anomaly detection: 1
+        plasma: 3
+        electric propulsion: 5
+        multispecies: 1
